--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ body {
 }
 
 img {
-    max-width: 80%;
+    width: 350px;
     height: auto;
 }
 
@@ -131,4 +131,58 @@ img {
     text-transform: uppercase;
     font-weight: bold;
     opacity: 0.7;
+}
+
+@media screen and (min-width: 1440px) {
+    .countdown-container {
+        flex-direction: row;
+        min-width: 90%;
+        align-content: center;
+        align-items: center;
+    }
+    
+    img {
+        width: 750px;
+    }
+
+    .countdown-wrapper {
+        gap: 3rem;
+    }
+
+    .countdown-title {
+        font-size: 48px;
+    }
+
+    .countdown-date {
+        font-size: 28px;
+    }
+    
+    .countdown-paragraph {
+        font-size: 20px;
+    }
+
+    .countdown-timer-container {
+        gap: 2rem;
+    }
+
+    .countdown-timer {
+        width: 120px;
+        height: 120px;
+    }
+
+    .countdown-number {
+        font-size: 48px;
+    }
+
+    .countdown-text {
+        font-size: 18px;
+    }
+}
+
+
+@media screen and (max-width: 1390px) {
+    img {
+        width: 135%;
+    }
+    
 }
